# mcp_travelassistant

./: .env.example  .gitignore  .pre-commit-config.yaml  BlogPost.html  BlogPost.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  QUICK_TEST_REFERENCE.md  README.md  check_test_status.py  conftest.py  copilot-instructions.md  mcp_orchestration_diagram_v2.html  pyproject.toml  pytest.ini  requirements.txt  run_all_tests.py  run_tests.sh  runtime_config.yaml
docs/: Banff_Jasper_Travel_Plan_June_2025.md  CONFIG_README.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  Illustrations.pptx  RUNTIME_CONFIG_IMPLEMENTATION.md  TASK_COMPLETION_SUMMARY.md  TEST_SETUP.md  TEST_SUITE_SUMMARY.md  TOOL_DELEGATION_FIX.md  UNIFIED_MCP_SERVER.md  UNIFIED_SERVER.md  UNIFIED_SERVER_QUICKREF.md
events/: concerts_New York_20251110_104111.json  concerts_New York_20251110_104642.json  concerts_New York_20251110_104821.json  concerts_New York_20251110_104836.json  concerts_in_New_York_New York, NY_20251110_103926.json  concerts_in_New_York_New York, NY_20251110_104641.json  concerts_in_New_York_New York, NY_20251110_104726.json  concerts_in_New_York_New York, NY_20251110_104820.json  concerts_in_New_York_New York, NY_20251110_104835.json
examples/: .mcp_server_config.json  .mcp_server_config_local_uvx.json  .mcp_server_config_uvx.json  MCP_CONFIG_IMPLEMENTATION.md  MCP_CONFIG_README.md  QUICK_REFERENCE.md  VISUAL_GUIDE.txt  claude_desktop_config_template.json  claude_desktop_config_uv_pypi.json  claude_desktop_config_uv_testpypi.json  config_example.py  test_uv_config.sh
finance/: stock_aapl_20251110_104113.json  stock_aapl_20251110_104642.json  stock_aapl_20251110_104821.json  stock_aapl_20251110_104836.json
flights/: LAX_JFK_2025-12-01_20251110_103752.json  LAX_JFK_2025-12-01_20251110_103819.json  LAX_JFK_2025-12-01_20251110_103846.json  LAX_JFK_2025-12-01_20251110_104551.json  LAX_JFK_2025-12-01_20251110_104640.json  LAX_JFK_2025-12-01_20251110_104729.json  LAX_JFK_2025-12-01_20251110_104819.json  LAX_JFK_2025-12-01_20251110_104834.json  LAX_JFK_2025-12-01_20251110_104844.json  LAX_JFK_2025-12-15_20251110_103929.json  LAX_JFK_2025-12-15_20251110_104641.json  LAX_JFK_2025-12-15_20251110_104727.json  LAX_JFK_2025-12-15_20251110_104820.json  LAX_JFK_2025-12-15_20251110_104835.json  SFO_LAX_2025-12-01_20251110_104115.json  SFO_LAX_2025-12-01_20251110_104642.json  SFO_LAX_2025-12-01_20251110_104821.json  SFO_LAX_2025-12-01_20251110_104836.json
hotels/: London_2026-01-15_2026-01-20_20251110_104119.json  London_2026-01-15_2026-01-20_20251110_104642.json  London_2026-01-15_2026-01-20_20251110_104821.json  London_2026-01-15_2026-01-20_20251110_104836.json  New_York_2025-12-01_2025-12-05_20251110_103821.json  New_York_2025-12-01_2025-12-05_20251110_103846.json  New_York_2025-12-01_2025-12-05_20251110_104551.json  New_York_2025-12-01_2025-12-05_20251110_104640.json  New_York_2025-12-01_2025-12-05_20251110_104729.json  New_York_2025-12-01_2025-12-05_20251110_104819.json  (+7 more)
(+24 files in other folders)
